--- a/apps/apropos.html
+++ b/apps/apropos.html
@@ -30,7 +30,7 @@
     <h1>à propos</h1>
     <p><strong>crée par :</strong> yannou</p>
     <p><strong>année :</strong> 2021</p>
-    <p><strong>version du système : </strong>v1.71:bêta</p>
+    <p><strong>version du système : </strong>v1.71:stable</p>
     <p><strong>Gestionnaire de fenêtres : </strong>WinBox</p>
 </body>
 </html>
