--- a/apps/settings.html
+++ b/apps/settings.html
@@ -38,6 +38,7 @@
 <body>
     <div class="app_menu">
         <button class="app_menu_button" id="general_button_menu" onclick="javascript:document.getElementById('iframec').src='../ressources/apps/settings/pages/général.html';">général</button>
+        <button class="app_menu_button" id="general_button_menu" onclick="javascript:document.getElementById('iframec').src='../ressources/apps/settings/pages/profil.html';">profil</button>
     </div>
     <iframe src="" id="iframec" frameborder="0" width="100%" height="1250px"></iframe>
 </body>
