--- a/apps/apropos.html
+++ b/apps/apropos.html
@@ -28,7 +28,7 @@
     <h1>à propos</h1>
     <p><strong>crée par :</strong> yannou</p>
     <p><strong>année :</strong> 2021</p>
-    <p><strong>version du système : </strong>v1.95:stable</p>
+    <p><strong>version du système : </strong>X 0.1:stable</p>
     <p><strong>système de fichier : </strong>FileDisk v0.5</p>
     <p><strong>langue : </strong><span id="LANGUAGE"></span></p>
     <p><strong>lecteur pdf activé : </strong><span id="PDFVIEWERACTIVATED"></span></p>
