--- a/apps/apropos.html
+++ b/apps/apropos.html
@@ -6,18 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        html, body{
-            margin: 0;
-            padding: 0;
-        }
-        body{
-            background-color: rgb(223, 223, 223);
-        }
         h1, h2, h3, h4, h5, h6, p, a{
             font-style: normal;
             font-family: Arial, Helvetica, sans-serif;
         }
-        * {cursor: url(../ressources/cursors/default.png), auto;}
         * {
             text-align: center;
         }
@@ -28,7 +20,7 @@
     <h1>à propos</h1>
     <p><strong>crée par :</strong> yannou</p>
     <p><strong>année :</strong> 2021</p>
-    <p><strong>version du système : </strong>X 0.1:stable</p>
+    <p><strong>version du système : </strong>v1.95:stable</p>
     <p><strong>système de fichier : </strong>FileDisk v0.5</p>
     <p><strong>langue : </strong><span id="LANGUAGE"></span></p>
     <p><strong>lecteur pdf activé : </strong><span id="PDFVIEWERACTIVATED"></span></p>
