--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             height: 35px;
         }
         html, body{
+            height: 100%;
+            width: 100%;
             padding: 0;
             margin: 0;
         }
@@ -55,6 +57,30 @@
             z-index: 3;
             border-radius: 3px;
         }
+        .O_menu_button{
+            width: 105px;
+            height: 105px;
+            border-radius: 3px;
+            background-color: rgba(255, 255, 255, 0.548);
+            border: none;
+            text-decoration: none;
+            color: rgba(255, 255, 255, 0.493);
+            font-weight: bold;
+            text-align: start;
+            color: black;
+        }
+        .O_menu_button:hover{
+            width: 105px;
+            height: 105px;
+            border-radius: 3px;
+            background-color: rgba(255, 255, 255, 0.548);
+            border: 5px solid rgba(0, 0, 0, 0.19);
+            text-decoration: none;
+            color: rgba(255, 255, 255, 0.493);
+            font-weight: bold;
+            text-align: start;
+            color: black;
+        }
         .bar_menu_right{
             width: 100px;
             background-color: rgba(255, 255, 255, 0.548);
@@ -85,6 +111,7 @@
         }
         .wb-body{
             background-color: rgba(255, 255, 255, 0);
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         #context_menu{
             box-shadow: -1px 2px 5px 1px rgba(255, 255, 255, 0.548);
@@ -204,12 +231,12 @@
 </head>
 <body onload="javascript:load();">
     <div class="bar" id="bar_id">
-        <button id="bar_base_button_O" class="bar_button" onclick="javascript:open_menu('barmenu_O');">O</button>
+        <button id="bar_base_button_O" class="bar_button" onclick="javascript:open_menu('bar_menu_O');">O</button>
         <button id="bar_base_button" class="bar_button" onclick="javascript:open_menu('barmenu_Apps');">Apps</button>
         <button id="time_base_button" class="bar_button" style="float: right;">Impossible de trouver la date!</button>
         <button id="bar_base_button" class="bar_button" style="float: right;" onclick="javascript:open_menu('barmenu_Power');">Power</button>
     </div>
-    <div class="bar_menu" id="barmenu_O">
+    <div class="bar_menu" id="bar_menu_O">
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/');">menu des apps</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/settings.html');">paramètres</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/opendialog.html');">éxécuter</button>
@@ -236,48 +263,6 @@
     <div class="bar_menu" id="context_menu_O">
         <button class="bar_button menu_button_long" onclick="javascript:document.location.href='https://www.bing.com/';">Eteindre</button>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 </body>
 <script>
     function allsecondsfunction(){
