--- a/apps/apropos.html
+++ b/apps/apropos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../apps UI/ui.css">
     <title>Document</title>
     <style>
         h1, h2, h3, h4, h5, h6, p, a{
@@ -16,19 +17,16 @@
     </style>
 </head>
 <body>
-    <img src="../ressources/logo/logo.png">
+    <img src="../ressources/logo/logo.png" width="135px" height="135px">
     <h1>à propos</h1>
-    <p><strong>crée par :</strong> yannou</p>
-    <p><strong>année :</strong> 2021</p>
-    <p><strong>version du système : </strong>v1.95:stable</p>
-    <p><strong>système de fichier : </strong>FileDisk v0.5</p>
+    <p><strong>crée par :</strong> Yannou</p>
+    <p><strong>année :</strong> 2022</p>
+    <p><strong>version du système : </strong>v3.1 X:stable</p>
     <p><strong>langue : </strong><span id="LANGUAGE"></span></p>
-    <p><strong>lecteur pdf activé : </strong><span id="PDFVIEWERACTIVATED"></span></p>
     <p><strong>connecté à internet : </strong><span id="ONLINE"></span></p>
 </body>
 <script>
     document.getElementById("LANGUAGE").innerHTML = navigator.language;
-    document.getElementById("PDFVIEWERACTIVATED").innerHTML = navigator.pdfViewerActivated;
     document.getElementById("ONLINE").innerHTML = navigator.onLine;
 </script>
 </html>
