--- a/apps/test.html
+++ b/apps/test.html
@@ -9,6 +9,8 @@
     </style>
     <script src="../../dist/winbox.bundle.js"></script>
     <link rel="stylesheet" href="../apps UI/ui.css">
+    <script>
+    </script>
 </head>
 <body>
 </body>
