--- a/system_page/mobile_app_list.html
+++ b/system_page/mobile_app_list.html
@@ -48,5 +48,10 @@
     <button class="app_button" onclick="javascript:document.location.href='https://classic.minecraft.net';">
         <span class="gg-border-all"></span>
         <p>Minecraft Classic Game</p>
+    </button>
+    <button class="app_button" onclick="javascript:document.location.href='../apps/';">
+        <span class="gg-feed"></span>
+        <p>All application menu</p>
+    </button>
 </body>
 </html>
